# StudyClaw

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  config.yml  docker-compose.yml  main.py  plan.md  prd.md  pyproject.toml
.claude/: settings.local.json
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py  rag_tool.py  web_search_tool.py
api/: __init__.py  chat.py  dependencies.py  documents.py  github.py  projects.py
config/: agent.yml  chroma.yml  prompts.yml  rag.yml  session.yml
data/test/: 产品介绍.pptx  产品特点.md  产品配置.json  产品配置.yaml  产品页面.html  前端脚本.js  扫地机器人简介.txt  示例代码.py  示例程序.cpp  示例程序.go  示例程序.java  示例程序.rs  规格说明.docx  销售数据.csv
database/: __init__.py  models.py  session.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/[id]/documents/: page.tsx
frontend/src/app/projects/[id]/settings/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/components/chat/: ChatHistorySidebar.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx
frontend/src/components/documents/: DocumentItem.tsx  DocumentList.tsx  DocumentUpload.tsx
frontend/src/components/github/: GitHubSettings.tsx  SyncStatus.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/projects/: CreateProjectDialog.tsx  ProjectCard.tsx  ProjectList.tsx
frontend/src/components/ui/: dialog.tsx
prompts/: main_prompts.txt  rag_prompts.txt
rag/: rag_service.py  vector_store.py
services/: __init__.py  document_service.py  github_service.py  project_service.py
session_store/: __init__.py  checkpoint.py  manager.py  postgres_store.py  redis_store.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_github_sync_flow.py  test_project_flow.py  test_rag_flow.py
tests/integration/: conftest.py  test_chat_api.py  test_documents_api.py  test_github_api.py  test_projects_api.py
tests/session_store/: conftest.py  test_checkpoint.py  test_integration.py  test_manager.py  test_postgres_store.py  test_redis_store.py
tests/unit/: conftest.py  test_document_service.py  test_github_service.py  test_project_service.py  test_prompt_loader.py  test_vector_store.py
utils/: config_handler.py  file_handler.py  prompt_loader.py
