[project]
name = "studyclaw"
version = "0.1.0"
description = "AI-powered customer service chatbot for floor cleaning robots"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langchain-community>=0.0.10",
    "dashscope>=1.14.0",
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "langchain-chroma>=1.1.0",
    "unstructured",
    "jq",
    "markdown",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "python-pptx>=1.0.2",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[dependency-groups]
dev = []
